--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,13 +12,15 @@
 }
 
 @media screen and (min-width: 1024px){
-    .zoom responsive{
-        zoom : 0.8;
+    .zoom-responsive{
+        transform: scale(0.8);
+        transform-origin: center center;
     }
 }
 
 @media screen and (min-width: 1280px){
-    .zoom responsive{
-        zoom : 1;
+    .zoom-responsive{
+        transform: scale(1);
+        transform-origin: center center;
     }
 }
